# torii3d

./: CMakeLists.txt  build.sh  build_debug.sh  build_tests.sh  debug.sh  run.sh  test.txt  tests.sh
idyll/: CMakeLists.txt  format ide.txt
idyll/include/: idyll.hpp  idyll_utility.hpp  utility.hpp
idyll/source/: idyll.cpp
torii/include/tests/: root.hpp  test_resource_manager.hpp  tests.hpp
torii/source/: main.cpp
torii3d/: CMakeLists.txt
torii3d/include/: color.hpp  display.hpp  event.hpp  keycodes.hpp  logger.hpp  math.hpp  model.hpp  settings.hpp  torii.hpp  utility.hpp
torii3d/include/ecs/: component.hpp  ecs_utility.hpp  entity.hpp  system.hpp  world.hpp
torii3d/include/platform/: display_impl.hpp  mesh_impl.hpp
torii3d/include/platform/OpenGL/: impl_opengl.hpp  impl_opengl_definitions.hpp  mesh_impl_opengl.hpp
torii3d/include/platform/x11/: display_impl_x11.hpp  keycodes_x11.hpp
torii3d/include/resource/: resource.hpp  text_document.hpp
torii3d/source/: color.cpp  display.cpp  logger.cpp  math.cpp  model.cpp  torii.cpp  utility.cpp
torii3d/source/ecs/: component.cpp  entity.cpp  system.cpp  world.cpp
torii3d/source/platform/: display_impl.cpp
torii3d/source/platform/OpenGL/: impl_opengl.cpp  impl_opengl_definitions.cpp  mesh_impl_opengl.cpp
torii3d/source/platform/x11/: display_impl_x11.cpp  keycodes_x11.cpp
torii3d/source/resource/: resource.cpp  text_document.cpp
